Renaming ins_product.receive_document_wizard with document.receive

--- a/modules/insurance_product/locale/fr_FR.po
+++ b/modules/insurance_product/locale/fr_FR.po
@@ -67,7 +67,7 @@ msgctxt "error:ins_product.product_validation_batch:"
 msgid "No Batch Path Specified"
 msgstr "Le chemin d'exécution des batchs n'est pas configuré"
 
-msgctxt "error:ins_product.receive_document_wizard:"
+msgctxt "error:document.receive:"
 msgid "No document request found for this object"
 msgstr "Aucune demande de document trouvé pour cet objet"
 
@@ -4808,31 +4808,31 @@ msgid "Generate"
 msgstr "Générer"
 
 msgctxt ""
-"wizard_button:ins_product.receive_document_wizard,attachment_setter,end:"
+"wizard_button:document.receive,attachment_setter,end:"
 msgid "Cancel"
 msgstr "Annuler"
 
 msgctxt ""
-"wizard_button:ins_product.receive_document_wizard,attachment_setter,only_store:"
+"wizard_button:document.receive,attachment_setter,only_store:"
 msgid "Next"
 msgstr "Suivant"
 
 msgctxt ""
-"wizard_button:ins_product.receive_document_wizard,input_document,end:"
+"wizard_button:document.receive,input_document,end:"
 msgid "Cancel"
 msgstr "Annuler"
 
 msgctxt ""
-"wizard_button:ins_product.receive_document_wizard,input_document,notify_request:"
+"wizard_button:document.receive,input_document,notify_request:"
 msgid "Complete"
 msgstr "Terminer"
 
 msgctxt ""
-"wizard_button:ins_product.receive_document_wizard,select_instance,attachment_setter:"
+"wizard_button:document.receive,select_instance,attachment_setter:"
 msgid "Continue"
 msgstr "Continuer"
 
 msgctxt ""
-"wizard_button:ins_product.receive_document_wizard,select_instance,end:"
+"wizard_button:document.receive,select_instance,end:"
 msgid "Cancel"
 msgstr "Annuler"
