--- a/modules/insurance_product/locale/fr_FR.po
+++ b/modules/insurance_product/locale/fr_FR.po
@@ -42,7 +42,7 @@ msgctxt "error:document.rule:"
 msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
 
-msgctxt "error:ins_product.eligibility_rule:"
+msgctxt "error:offered.eligibility.rule:"
 msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
 
@@ -1313,95 +1313,95 @@ msgctxt "field:offered.eligibility.rule-relation.kind,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:ins_product.eligibility_rule,config_kind:"
+msgctxt "field:offered.eligibility.rule,config_kind:"
 msgid "Conf. kind"
 msgstr "Type de Conf."
 
-msgctxt "field:ins_product.eligibility_rule,create_date:"
+msgctxt "field:offered.eligibility.rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:ins_product.eligibility_rule,create_date_:"
+msgctxt "field:offered.eligibility.rule,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:ins_product.eligibility_rule,create_uid:"
+msgctxt "field:offered.eligibility.rule,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:ins_product.eligibility_rule,end_date:"
+msgctxt "field:offered.eligibility.rule,end_date:"
 msgid "To Date"
 msgstr "Date de Fin"
 
-msgctxt "field:ins_product.eligibility_rule,id:"
+msgctxt "field:offered.eligibility.rule,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:ins_product.eligibility_rule,must_expand_tree:"
+msgctxt "field:offered.eligibility.rule,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
-msgctxt "field:ins_product.eligibility_rule,offered:"
+msgctxt "field:offered.eligibility.rule,offered:"
 msgid "Offered"
 msgstr "Offre"
 
-msgctxt "field:ins_product.eligibility_rule,offered_kind:"
+msgctxt "field:offered.eligibility.rule,offered_kind:"
 msgid "Offered Kind"
 msgstr "Typage"
 
-msgctxt "field:ins_product.eligibility_rule,rec_name:"
+msgctxt "field:offered.eligibility.rule,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.eligibility_rule,relation_kinds:"
+msgctxt "field:offered.eligibility.rule,relation_kinds:"
 msgid "Relations Authorized"
 msgstr "Relations Autorisées"
 
-msgctxt "field:ins_product.eligibility_rule,rule:"
+msgctxt "field:offered.eligibility.rule,rule:"
 msgid "Rule Engine"
 msgstr "Moteur de Règle"
 
-msgctxt "field:ins_product.eligibility_rule,rule_complementary_data:"
+msgctxt "field:offered.eligibility.rule,rule_complementary_data:"
 msgid "Rule Complementary Data"
 msgstr "Paramètres de Rêgle"
 
-msgctxt "field:ins_product.eligibility_rule,start_date:"
+msgctxt "field:offered.eligibility.rule,start_date:"
 msgid "From Date"
 msgstr "Date de Début"
 
-msgctxt "field:ins_product.eligibility_rule,sub_elem_config_kind:"
+msgctxt "field:offered.eligibility.rule,sub_elem_config_kind:"
 msgid "Sub Elem Conf. kind"
 msgstr "Type de Conf."
 
-msgctxt "field:ins_product.eligibility_rule,sub_elem_rule:"
+msgctxt "field:offered.eligibility.rule,sub_elem_rule:"
 msgid "Sub Elem Rule Engine"
 msgstr "Moteur de Règle"
 
-msgctxt "field:ins_product.eligibility_rule,sub_elem_rule_complementary_data:"
+msgctxt "field:offered.eligibility.rule,sub_elem_rule_complementary_data:"
 msgid "Rule Complementary Data"
 msgstr "Paramètres de Rêgle"
 
-msgctxt "field:ins_product.eligibility_rule,subscriber_classes:"
+msgctxt "field:offered.eligibility.rule,subscriber_classes:"
 msgid "Can be subscribed"
 msgstr "Peut-être souscrit par"
 
-msgctxt "field:ins_product.eligibility_rule,template:"
+msgctxt "field:offered.eligibility.rule,template:"
 msgid "Template"
 msgstr "Modèle"
 
-msgctxt "field:ins_product.eligibility_rule,template_behaviour:"
+msgctxt "field:offered.eligibility.rule,template_behaviour:"
 msgid "Template Behaviour"
 msgstr "Comportement du Modèle"
 
-msgctxt "field:ins_product.eligibility_rule,view_rec_name:"
+msgctxt "field:offered.eligibility.rule,view_rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.eligibility_rule,write_date:"
+msgctxt "field:offered.eligibility.rule,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:ins_product.eligibility_rule,write_uid:"
+msgctxt "field:offered.eligibility.rule,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -3349,7 +3349,7 @@ msgid "Define relation between eligibility rule and relation kind authorized"
 msgstr ""
 "Table intermédiaire entre la règle d'égibilité et les relations autorisées"
 
-msgctxt "model:ins_product.eligibility_rule,name:"
+msgctxt "model:offered.eligibility.rule,name:"
 msgid "Eligibility Rule"
 msgstr "Eligibilite"
 
@@ -4028,55 +4028,55 @@ msgctxt "selection:document.rule,template_behaviour:"
 msgid "Remove"
 msgstr "Remplacer"
 
-msgctxt "selection:ins_product.eligibility_rule,config_kind:"
+msgctxt "selection:offered.eligibility.rule,config_kind:"
 msgid "Advanced"
 msgstr "Avancé"
 
-msgctxt "selection:ins_product.eligibility_rule,config_kind:"
+msgctxt "selection:offered.eligibility.rule,config_kind:"
 msgid "Simple"
 msgstr "Simple"
 
-msgctxt "selection:ins_product.eligibility_rule,offered:"
+msgctxt "selection:offered.eligibility.rule,offered:"
 msgid "Benefit"
 msgstr "Prestation"
 
-msgctxt "selection:ins_product.eligibility_rule,offered:"
+msgctxt "selection:offered.eligibility.rule,offered:"
 msgid "Coverage"
 msgstr "Garantie"
 
-msgctxt "selection:ins_product.eligibility_rule,offered:"
+msgctxt "selection:offered.eligibility.rule,offered:"
 msgid "Product"
 msgstr "Produit"
 
-msgctxt "selection:ins_product.eligibility_rule,sub_elem_config_kind:"
+msgctxt "selection:offered.eligibility.rule,sub_elem_config_kind:"
 msgid "Advanced"
 msgstr "Avancé"
 
-msgctxt "selection:ins_product.eligibility_rule,sub_elem_config_kind:"
+msgctxt "selection:offered.eligibility.rule,sub_elem_config_kind:"
 msgid "Simple"
 msgstr "Simple"
 
-msgctxt "selection:ins_product.eligibility_rule,subscriber_classes:"
+msgctxt "selection:offered.eligibility.rule,subscriber_classes:"
 msgid "All"
 msgstr "Tous"
 
-msgctxt "selection:ins_product.eligibility_rule,subscriber_classes:"
+msgctxt "selection:offered.eligibility.rule,subscriber_classes:"
 msgid "Person"
 msgstr "Personne Physique"
 
-msgctxt "selection:ins_product.eligibility_rule,subscriber_classes:"
+msgctxt "selection:offered.eligibility.rule,subscriber_classes:"
 msgid "Society"
 msgstr "Société"
 
-msgctxt "selection:ins_product.eligibility_rule,template_behaviour:"
+msgctxt "selection:offered.eligibility.rule,template_behaviour:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:ins_product.eligibility_rule,template_behaviour:"
+msgctxt "selection:offered.eligibility.rule,template_behaviour:"
 msgid "Add"
 msgstr "Compléter"
 
-msgctxt "selection:ins_product.eligibility_rule,template_behaviour:"
+msgctxt "selection:offered.eligibility.rule,template_behaviour:"
 msgid "Remove"
 msgstr "Remplacer"
 
@@ -4616,11 +4616,11 @@ msgctxt "view:document.rule:"
 msgid "Document Rule"
 msgstr "Document"
 
-msgctxt "view:ins_product.eligibility_rule:"
+msgctxt "view:offered.eligibility.rule:"
 msgid "Covered Element"
 msgstr "Elément Couvert"
 
-msgctxt "view:ins_product.eligibility_rule:"
+msgctxt "view:offered.eligibility.rule:"
 msgid "Eligibility rule"
 msgstr "Eligibilite"
 
