--- a/modules/insurance_product/locale/fr_FR.po
+++ b/modules/insurance_product/locale/fr_FR.po
@@ -79,7 +79,7 @@ msgctxt "error:ins_product.simple_pricing_rule:"
 msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
 
-msgctxt "error:ins_product.term_renewal_rule:"
+msgctxt "error:offered.term.rule:"
 msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
 
@@ -2447,91 +2447,91 @@ msgctxt "field:benefit.rule.stage,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:ins_product.term_renewal_rule,can_be_renewed:"
+msgctxt "field:offered.term.rule,can_be_renewed:"
 msgid "Can be renewed"
 msgstr "Peut Etre Renouvelé"
 
-msgctxt "field:ins_product.term_renewal_rule,config_kind:"
+msgctxt "field:offered.term.rule,config_kind:"
 msgid "Conf. kind"
 msgstr "Type de Conf."
 
-msgctxt "field:ins_product.term_renewal_rule,create_date:"
+msgctxt "field:offered.term.rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:ins_product.term_renewal_rule,create_date_:"
+msgctxt "field:offered.term.rule,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:ins_product.term_renewal_rule,create_uid:"
+msgctxt "field:offered.term.rule,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:ins_product.term_renewal_rule,date_for_sync:"
+msgctxt "field:offered.term.rule,date_for_sync:"
 msgid "Sync Date"
 msgstr "Date de Synchro"
 
-msgctxt "field:ins_product.term_renewal_rule,end_date:"
+msgctxt "field:offered.term.rule,end_date:"
 msgid "To Date"
 msgstr "Date de Fin"
 
-msgctxt "field:ins_product.term_renewal_rule,frequency:"
+msgctxt "field:offered.term.rule,frequency:"
 msgid "Frequency"
 msgstr "Fréquence"
 
-msgctxt "field:ins_product.term_renewal_rule,id:"
+msgctxt "field:offered.term.rule,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:ins_product.term_renewal_rule,must_expand_tree:"
+msgctxt "field:offered.term.rule,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
-msgctxt "field:ins_product.term_renewal_rule,offered:"
+msgctxt "field:offered.term.rule,offered:"
 msgid "Offered"
 msgstr "Offre"
 
-msgctxt "field:ins_product.term_renewal_rule,rec_name:"
+msgctxt "field:offered.term.rule,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.term_renewal_rule,rule:"
+msgctxt "field:offered.term.rule,rule:"
 msgid "Rule Engine"
 msgstr "Moteur de Règle"
 
-msgctxt "field:ins_product.term_renewal_rule,rule_complementary_data:"
+msgctxt "field:offered.term.rule,rule_complementary_data:"
 msgid "Rule Complementary Data"
 msgstr "Paramètres de Rêgle"
 
-msgctxt "field:ins_product.term_renewal_rule,start_date:"
+msgctxt "field:offered.term.rule,start_date:"
 msgid "From Date"
 msgstr "Date de Début"
 
-msgctxt "field:ins_product.term_renewal_rule,template:"
+msgctxt "field:offered.term.rule,template:"
 msgid "Template"
 msgstr "Modèle"
 
-msgctxt "field:ins_product.term_renewal_rule,template_behaviour:"
+msgctxt "field:offered.term.rule,template_behaviour:"
 msgid "Template Behaviour"
 msgstr "Comportement du Modèle"
 
-msgctxt "field:ins_product.term_renewal_rule,term_date_choice:"
+msgctxt "field:offered.term.rule,term_date_choice:"
 msgid "Term Date Selection"
 msgstr "Date de Terme"
 
-msgctxt "field:ins_product.term_renewal_rule,view_rec_name:"
+msgctxt "field:offered.term.rule,view_rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.term_renewal_rule,with_term:"
+msgctxt "field:offered.term.rule,with_term:"
 msgid "With Term"
 msgstr "Avec Terme"
 
-msgctxt "field:ins_product.term_renewal_rule,write_date:"
+msgctxt "field:offered.term.rule,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:ins_product.term_renewal_rule,write_uid:"
+msgctxt "field:offered.term.rule,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -3461,7 +3461,7 @@ msgctxt "model:benefit.rule.stage,name:"
 msgid "Sub Benefit Rule"
 msgstr "Sous Règles de Prestation"
 
-msgctxt "model:ins_product.term_renewal_rule,name:"
+msgctxt "model:offered.term.rule,name:"
 msgid "Term and Renewal Rule"
 msgstr "Règle de Terme - Renouvellement"
 
@@ -4324,63 +4324,63 @@ msgctxt "selection:benefit.rule.stage,indemnification_calc_unit:"
 msgid "Year"
 msgstr "Année"
 
-msgctxt "selection:ins_product.term_renewal_rule,config_kind:"
+msgctxt "selection:offered.term.rule,config_kind:"
 msgid "Advanced"
 msgstr "Avancé"
 
-msgctxt "selection:ins_product.term_renewal_rule,config_kind:"
+msgctxt "selection:offered.term.rule,config_kind:"
 msgid "Simple"
 msgstr "Simple"
 
-msgctxt "selection:ins_product.term_renewal_rule,frequency:"
+msgctxt "selection:offered.term.rule,frequency:"
 msgid "Biyearly"
 msgstr "Biannuel"
 
-msgctxt "selection:ins_product.term_renewal_rule,frequency:"
+msgctxt "selection:offered.term.rule,frequency:"
 msgid "Half Yearly"
 msgstr "Semestriel"
 
-msgctxt "selection:ins_product.term_renewal_rule,frequency:"
+msgctxt "selection:offered.term.rule,frequency:"
 msgid "Monthly"
 msgstr "Mensuel"
 
-msgctxt "selection:ins_product.term_renewal_rule,frequency:"
+msgctxt "selection:offered.term.rule,frequency:"
 msgid "Quarterly"
 msgstr "Trimestriel"
 
-msgctxt "selection:ins_product.term_renewal_rule,frequency:"
+msgctxt "selection:offered.term.rule,frequency:"
 msgid "Yearly"
 msgstr "Annuel"
 
-msgctxt "selection:ins_product.term_renewal_rule,offered:"
+msgctxt "selection:offered.term.rule,offered:"
 msgid "Benefit"
 msgstr "Prestation"
 
-msgctxt "selection:ins_product.term_renewal_rule,offered:"
+msgctxt "selection:offered.term.rule,offered:"
 msgid "Coverage"
 msgstr "Garantie"
 
-msgctxt "selection:ins_product.term_renewal_rule,offered:"
+msgctxt "selection:offered.term.rule,offered:"
 msgid "Product"
 msgstr "Produit"
 
-msgctxt "selection:ins_product.term_renewal_rule,template_behaviour:"
+msgctxt "selection:offered.term.rule,template_behaviour:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:ins_product.term_renewal_rule,template_behaviour:"
+msgctxt "selection:offered.term.rule,template_behaviour:"
 msgid "Add"
 msgstr "Compléter"
 
-msgctxt "selection:ins_product.term_renewal_rule,template_behaviour:"
+msgctxt "selection:offered.term.rule,template_behaviour:"
 msgid "Remove"
 msgstr "Remplacer"
 
-msgctxt "selection:ins_product.term_renewal_rule,term_date_choice:"
+msgctxt "selection:offered.term.rule,term_date_choice:"
 msgid "At subscription Time"
 msgstr "À La Souscription"
 
-msgctxt "selection:ins_product.term_renewal_rule,term_date_choice:"
+msgctxt "selection:offered.term.rule,term_date_choice:"
 msgid "At this Date"
 msgstr "À Cette Date"
 
@@ -4700,7 +4700,7 @@ msgctxt "view:benefit.rule.stage:"
 msgid "Sub Benefit Rule"
 msgstr "Sous Règles de Prestation"
 
-msgctxt "view:ins_product.term_renewal_rule:"
+msgctxt "view:offered.term.rule:"
 msgid "Term - Renewal rule"
 msgstr "Règle de Terme - Renouvellement"
 
