--- a/modules/insurance_product/locale/fr_FR.po
+++ b/modules/insurance_product/locale/fr_FR.po
@@ -71,7 +71,7 @@ msgctxt "error:document.receive:"
 msgid "No document request found for this object"
 msgstr "Aucune demande de document trouvé pour cet objet"
 
-msgctxt "error:ins_product.reserve_rule:"
+msgctxt "error:benefit.reserve.rule:"
 msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
 
@@ -2203,75 +2203,75 @@ msgctxt "field:document.receive.request,value:"
 msgid "Value"
 msgstr "Nom"
 
-msgctxt "field:ins_product.reserve_rule,amount:"
+msgctxt "field:benefit.reserve.rule,amount:"
 msgid "Amount"
 msgstr "Montant"
 
-msgctxt "field:ins_product.reserve_rule,config_kind:"
+msgctxt "field:benefit.reserve.rule,config_kind:"
 msgid "Conf. kind"
 msgstr "Type de Conf."
 
-msgctxt "field:ins_product.reserve_rule,create_date:"
+msgctxt "field:benefit.reserve.rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:ins_product.reserve_rule,create_date_:"
+msgctxt "field:benefit.reserve.rule,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:ins_product.reserve_rule,create_uid:"
+msgctxt "field:benefit.reserve.rule,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:ins_product.reserve_rule,end_date:"
+msgctxt "field:benefit.reserve.rule,end_date:"
 msgid "To Date"
 msgstr "Date de Fin"
 
-msgctxt "field:ins_product.reserve_rule,id:"
+msgctxt "field:benefit.reserve.rule,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:ins_product.reserve_rule,must_expand_tree:"
+msgctxt "field:benefit.reserve.rule,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
-msgctxt "field:ins_product.reserve_rule,offered:"
+msgctxt "field:benefit.reserve.rule,offered:"
 msgid "Offered"
 msgstr "Offre"
 
-msgctxt "field:ins_product.reserve_rule,rec_name:"
+msgctxt "field:benefit.reserve.rule,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.reserve_rule,rule:"
+msgctxt "field:benefit.reserve.rule,rule:"
 msgid "Rule Engine"
 msgstr "Moteur de Règle"
 
-msgctxt "field:ins_product.reserve_rule,rule_complementary_data:"
+msgctxt "field:benefit.reserve.rule,rule_complementary_data:"
 msgid "Rule Complementary Data"
 msgstr "Paramètres de Rêgle"
 
-msgctxt "field:ins_product.reserve_rule,start_date:"
+msgctxt "field:benefit.reserve.rule,start_date:"
 msgid "From Date"
 msgstr "Date de Début"
 
-msgctxt "field:ins_product.reserve_rule,template:"
+msgctxt "field:benefit.reserve.rule,template:"
 msgid "Template"
 msgstr "Modèle"
 
-msgctxt "field:ins_product.reserve_rule,template_behaviour:"
+msgctxt "field:benefit.reserve.rule,template_behaviour:"
 msgid "Template Behaviour"
 msgstr "Comportement du Modèle"
 
-msgctxt "field:ins_product.reserve_rule,view_rec_name:"
+msgctxt "field:benefit.reserve.rule,view_rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.reserve_rule,write_date:"
+msgctxt "field:benefit.reserve.rule,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:ins_product.reserve_rule,write_uid:"
+msgctxt "field:benefit.reserve.rule,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -3425,7 +3425,7 @@ msgctxt "model:document.receive.request,name:"
 msgid "Request Finder"
 msgstr "Rechercher une Demande"
 
-msgctxt "model:ins_product.reserve_rule,name:"
+msgctxt "model:benefit.reserve.rule,name:"
 msgid "Reserve Rule"
 msgstr "Provisionnement"
 
@@ -4196,35 +4196,35 @@ msgctxt "selection:document.receive.request,kind:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:ins_product.reserve_rule,config_kind:"
+msgctxt "selection:benefit.reserve.rule,config_kind:"
 msgid "Advanced"
 msgstr "Avancé"
 
-msgctxt "selection:ins_product.reserve_rule,config_kind:"
+msgctxt "selection:benefit.reserve.rule,config_kind:"
 msgid "Simple"
 msgstr "Simple"
 
-msgctxt "selection:ins_product.reserve_rule,offered:"
+msgctxt "selection:benefit.reserve.rule,offered:"
 msgid "Benefit"
 msgstr "Prestation"
 
-msgctxt "selection:ins_product.reserve_rule,offered:"
+msgctxt "selection:benefit.reserve.rule,offered:"
 msgid "Coverage"
 msgstr "Garantie"
 
-msgctxt "selection:ins_product.reserve_rule,offered:"
+msgctxt "selection:benefit.reserve.rule,offered:"
 msgid "Product"
 msgstr "Produit"
 
-msgctxt "selection:ins_product.reserve_rule,template_behaviour:"
+msgctxt "selection:benefit.reserve.rule,template_behaviour:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:ins_product.reserve_rule,template_behaviour:"
+msgctxt "selection:benefit.reserve.rule,template_behaviour:"
 msgid "Add"
 msgstr "Compléter"
 
-msgctxt "selection:ins_product.reserve_rule,template_behaviour:"
+msgctxt "selection:benefit.reserve.rule,template_behaviour:"
 msgid "Remove"
 msgstr "Remplacer"
 
@@ -4692,7 +4692,7 @@ msgctxt "view:document.receive.request:"
 msgid "Request Finder"
 msgstr "Rechercher une Demande"
 
-msgctxt "view:ins_product.reserve_rule:"
+msgctxt "view:benefit.reserve.rule:"
 msgid "Reserve rule"
 msgstr "Provisionnement"
 
