--- a/modules/insurance_product/locale/fr_FR.po
+++ b/modules/insurance_product/locale/fr_FR.po
@@ -705,51 +705,51 @@ msgctxt "field:clause.rule,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:ins_product.clause_version,content:"
+msgctxt "field:clause.version,content:"
 msgid "Content"
 msgstr "Contenu"
 
-msgctxt "field:ins_product.clause_version,create_date:"
+msgctxt "field:clause.version,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:ins_product.clause_version,create_date_:"
+msgctxt "field:clause.version,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:ins_product.clause_version,create_uid:"
+msgctxt "field:clause.version,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:ins_product.clause_version,end_date:"
+msgctxt "field:clause.version,end_date:"
 msgid "End Date"
 msgstr "Date de Fin"
 
-msgctxt "field:ins_product.clause_version,id:"
+msgctxt "field:clause.version,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:ins_product.clause_version,main_elem:"
+msgctxt "field:clause.version,main_elem:"
 msgid "Descriptor"
 msgstr "Descripteur"
 
-msgctxt "field:ins_product.clause_version,must_expand_tree:"
+msgctxt "field:clause.version,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
-msgctxt "field:ins_product.clause_version,rec_name:"
+msgctxt "field:clause.version,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.clause_version,start_date:"
+msgctxt "field:clause.version,start_date:"
 msgid "Start Date"
 msgstr "Date de Début"
 
-msgctxt "field:ins_product.clause_version,write_date:"
+msgctxt "field:clause.version,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:ins_product.clause_version,write_uid:"
+msgctxt "field:clause.version,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -3300,7 +3300,7 @@ msgctxt "model:clause.rule,name:"
 msgid "Clause Rule"
 msgstr "Clause"
 
-msgctxt "model:ins_product.clause_version,name:"
+msgctxt "model:clause.version,name:"
 msgid "Clause Version"
 msgstr "Version de Clause"
 
@@ -4560,11 +4560,11 @@ msgctxt "view:clause.rule:"
 msgid "Clause rule"
 msgstr "Clause"
 
-msgctxt "view:ins_product.clause_version:"
+msgctxt "view:clause.version:"
 msgid "Clause Version"
 msgstr "Version de Clause"
 
-msgctxt "view:ins_product.clause_version:"
+msgctxt "view:clause.version:"
 msgid "Clause rule"
 msgstr "Clause"
 
